@@ -693,6 +693,7 @@ class Request(Base):
                                and_(cls.date_from <= req.date_to,
                                     cls.date_to >= req.date_from)),
                                cls.status != 'CANCELED',
+                               cls.status != 'DENIED',
                                User.manager_dn == req.user.manager_dn,
                                cls.id != req.id),
                         count=count,
@@ -715,6 +716,7 @@ class Request(Base):
                                and_(cls.date_from <= req.date_to,
                                     cls.date_to >= req.date_from)),
                                cls.status != 'CANCELED',
+                               cls.status != 'DENIED',
                                User.ou == req.user.ou,
                                cls.id != req.id),
                         count=count,
@@ -736,6 +738,7 @@ class Request(Base):
                                and_(cls.date_from <= req.date_to,
                                     cls.date_to >= req.date_from)),
                                cls.status != 'CANCELED',
+                               cls.status != 'DENIED',
                                cls.id != req.id),
                         count=count,
                         order_by=cls.user_id,
