@@ -4,6 +4,7 @@
 - Add new vacation type: Recovery
   * Work as others requests type but is excluded from export
 - Fixes bug: conflicts were not working properly in non LDAP mode
+- Fixes bug: conflicts should not include DENIED requests
 
 1.6
 ---
